# docs/swagger.yaml
@@ -1342,6 +1342,14 @@ paths:
         in: query
         name: user_id
         type: integer
+      - description: Start date (YYYY-MM-DD)
+        in: query
+        name: start_date
+        type: string
+      - description: End date (YYYY-MM-DD)
+        in: query
+        name: end_date
+        type: string
       produces:
       - application/json
       responses:
